--- a/index.html
+++ b/index.html
@@ -1,120 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Crypto Hidden Object Game</title>
-  <style>
-    /* Base styling from the enhanced version */
-    body { margin: 0; padding: 0; font-family: Arial, sans-serif; background: linear-gradient(135deg, #c2e9fb 0%, #a1c4fd 100%); color: #333; }
-    header { background: #4a90e2; color: white; padding: 1rem 0; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 100; }
-    #game-card { max-width: 700px; margin: 2rem auto; background: rgba(255,255,255,0.9); backdrop-filter: blur(10px); border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); overflow: hidden; }
-    #start-screen, #game-screen { padding: 1rem 1.5rem; }
-    #start-screen p { margin-top: 0; }
-    #start-screen select, #start-screen button { margin-top: 0.5rem; margin-right: 0.5rem; }
-    #score-bar { display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center; margin-bottom: 0.5rem; font-weight: bold; }
-    #progress-container { width: 100%; background: #e0e0e0; border-radius: 7px; height: 14px; overflow: hidden; margin-bottom: 0.5rem; }
-    #progress-bar { height: 100%; width: 100%; background: #4caf50; transition: width 0.2s linear, background 0.2s linear; }
-    #hidden-object-area { position: relative; width: 100%; height: 340px; background: linear-gradient(180deg, #83a4d4 0%, #b6fbff 100%); border-radius: 8px; overflow: hidden; margin-bottom: 1rem; }
-    .object, .bonus, .time-item, .life-item, .boss-star, .bomb { position: absolute; display: flex; justify-content: center; align-items: center; font-size: 26px; font-weight: bold; cursor: pointer; }
-    .object { width: 32px; height: 32px; color: #ffcc00; animation: pulse 2s infinite; }
-    .bonus { width: 32px; height: 32px; color: #ffc107; animation: bounce 1.5s infinite; }
-    .time-item { width: 32px; height: 32px; color: #00bcd4; animation: bounce 1.6s infinite; }
-    .life-item { width: 32px; height: 32px; color: #e91e63; animation: bounce 1.7s infinite; }
-    .boss-star { width: 48px; height: 48px; color: #ffd700; animation: pulse 1s infinite; }
-    .bomb { width: 32px; height: 32px; color: #f44336; }
-    @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.2); } 100% { transform: scale(1); } }
-    @keyframes bounce { 0%,100% { transform: translateY(0); } 50% { transform: translateY(-5px); } }
-    #controls { display: flex; flex-wrap: wrap; gap: 0.5rem; margin-bottom: 0.5rem; }
-    #controls button { flex: 1 1 120px; padding: 0.5rem; border: none; border-radius: 5px; cursor: pointer; font-size: 0.9rem; }
-    #controls button.primary { background: #4a90e2; color: #fff; }
-    #controls button.secondary { background: #ccc; color: #333; }
-    #controls button.danger { background: #f44336; color: #fff; }
-    #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); display: none; align-items: center; justify-content: center; z-index: 200; }
-    .overlay-panel { background: #fff; color: #333; border-radius: 10px; padding: 1rem; width: 90%; max-width: 400px; box-shadow: 0 4px 12px rgba(0,0,0,0.3); text-align: center; }
-    .dark-mode .overlay-panel { background: #2d2d2d; color: #f5f5f5; }
-    .overlay-panel h2 { margin-top: 0; }
-    #shop-items { display: flex; flex-direction: column; gap: 0.5rem; margin-top: 0.5rem; }
-    .shop-item { background: #f7f7f7; border-radius: 6px; padding: 0.5rem; display: flex; justify-content: space-between; align-items: center; cursor: pointer; border: 1px solid #ddd; }
-    .shop-item:hover { background: #e0f2ff; }
-    .dark-mode .shop-item { background: #444; border: 1px solid #555; }
-    .dark-mode .shop-item:hover { background: #555; }
-    #game-message { margin-top: 0.5rem; font-weight: bold; }
-  </style>
+.time-item{width:32px;height:32px;color:#00bcd4;animation:bounce 1.6s infinite}
+.life-item{width:32px;height:32px;color:#e91e63;animation:bounce 1.7s infinite}
+.boss-star{width:46px;height:46px;color:#ffd700;animation:pulse 1.1s infinite}
+.bomb{width:32px;height:32px;color:#f44336}
+@keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.18)}100%{transform:scale(1)}}
+@keyframes bounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+.spark{position:absolute;width:8px;height:8px;background:#ffd700;border-radius:50%;opacity:.9;animation:spark .6s forwards}
+@keyframes spark{0%{transform:scale(1);opacity:1}100%{transform:scale(.1);opacity:0}}
+#controls{display:flex;flex-wrap:wrap;gap:.5rem}
+#controls button{flex:1 1 120px;padding:.55rem;border:none;border-radius:6px;background:#ddd;font-weight:600;cursor:pointer}
+#controls .primary{background:var(--primary);color:#fff}
+#controls .danger{background:var(--danger);color:#fff}
+#overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center;z-index:50}
+.overlay-panel{width:min(92%,420px);background:#fff;color:#333;border-radius:12px;padding:1rem 1.25rem;box-shadow:0 4px 12px rgba(0,0,0,.35);text-align:center}
+.dark-mode{--bg1:#111827;--bg2:#1f2937;--card:#1f2937;--text:#f5f5f5}
+.dark-mode #game-card{background:rgba(31,41,55,.92);color:#f5f5f5}
+</style>
 </head>
 <body>
-  <header><h1>Crypto Hidden Object Game (Demo)</h1></header>
-  <div id="game-card">
-    <!-- Start Screen -->
-    <div id="start-screen">
-      <p>
-        Welcome to this hidden object demo game. Choose a difficulty level and theme, then start. You begin with a demo balance of 5 coins.
-      </p>
-      <label for="difficulty-select">Difficulty:&nbsp;</label>
-      <select id="difficulty-select">
-        <option value="Easy">Easy</option>
-        <option value="Normal" selected>Normal</option>
-        <option value="Hard">Hard</option>
-      </select>
-      <label for="theme-select">Theme:&nbsp;</label>
-      <select id="theme-select">
-        <option value="default" selected>Classic</option>
-        <option value="time">Time Travel</option>
-        <option value="underwater">Underwater</option>
-        <option value="dream">Dream World</option>
-        <option value="village">Village Secrets</option>
-      </select>
-      <br>
-      <button id="connect-wallet" class="secondary">Connect Wallet (Demo)</button>
-      <button id="start-game" class="primary">Start Game</button>
-      <div id="balance-display"></div>
-      <div id="best-stats"></div>
-      <!-- Wallet info display -->
-      <div id="wallet-address"></div>
-      <div id="token-balance"></div>
-    </div>
-    <!-- Game Screen -->
-    <div id="game-screen" style="display: none;">
-      <div id="score-bar">
-        <span id="level-info">Level: 1</span>
-        <span id="coins-display">Coins: 5</span>
-        <span id="lives-info">Lives: 3</span>
-        <span id="highest-info">Highest: 0</span>
-      </div>
-      <div id="progress-container"><div id="progress-bar"></div></div>
-      <div id="hidden-object-area"></div>
-      <div id="controls">
-        <button id="hint-button" class="secondary">Hint (Cost: 1)</button>
-        <button id="reveal-button" class="secondary">Reveal All (Cost: 3)</button>
-        <button id="pause-button" class="secondary">Pause</button>
-        <button id="darkmode-button" class="secondary">Dark Mode</button>
-        <button id="reset-button" class="danger">Reset Game</button>
-      </div>
-      <div id="game-message"></div>
-    </div>
-  </div>
-  <!-- Overlay for story, shop and achievements -->
-  <div id="overlay">
-    <div id="story-panel" class="overlay-panel" style="display: none;">
-      <h2>Story</h2>
-      <p id="story-text">Some story goes here...</p>
-      <button id="story-continue" class="primary">Continue</button>
-    </div>
-    <div id="shop-panel" class="overlay-panel" style="display: none;">
-      <h2>Shop</h2>
-      <p>Spend your coins on power-ups for the next level.</p>
-      <div id="shop-items"></div>
-      <button id="shop-continue" class="primary">Continue</button>
-    </div>
-    <div id="achievement-panel" class="overlay-panel" style="display: none;">
-      <h2>Achievement Unlocked!</h2>
-      <p id="achievement-text"></p>
-      <button id="achievement-continue" class="primary">Continue</button>
-    </div>
-  </div>
-  <!-- Ethers.js and wallet integration for ETH -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-  <script src="wallet_eth_integration.js"></script>
-  <script src="script.js"></script>
+<header><h1>Crypto Hidden Object Game (Demo)</h1></header>
+<div id="game-card">
+<!-- Start Screen -->
+<div id="start-screen">
+<p>Choose a difficulty and theme, connect your wallet (optional), then start. You begin with a demo balance of 5 coins.</p>
+<label>Difficulty:&nbsp;</label>
+<select id="difficulty-select"><option>Easy</option><option selected>Normal</option><option>Hard</option></select>
+<label>Theme:&nbsp;</label>
+<select id="theme-select"><option value="default" selected>Classic</option><option value="time">Time</option><option value="underwater">Underwater</option><option value="dream">Dream</option><option value="village">Village</option></select>
+<br/>
+<button id="connect-wallet" class="primary">Connect Wallet</button>
+<button id="start-game" class="primary">Start Game</button>
+<div id="wallet-address"></div>
+<div id="balance-display"></div>
+<div id="best-stats"></div>
+</div>
+
+
+<!-- Game Screen -->
+<div id="game-screen" style="display:none">
+<div id="score-bar">
+<span id="level-info">Level: 1</span>
+<span id="coins-display">Coins: 5</span>
+<span id="lives-info">Lives: 3</span>
+<span id="highest-info">Highest: 0</span>
+</div>
+<div id="progress-container"><div id="progress-bar"></div></div>
+<div id="hidden-object-area"></div>
+<div id="controls">
+<button id="hint-button">Hint (Cost: 1)</button>
+<button id="reveal-button">Reveal All (Cost: 3)</button>
+<button id="pause-button">Pause</button>
+<button id="darkmode-button">Dark Mode</button>
+<button id="reset-button" class="danger">Reset Game</button>
+</div>
+<div id="game-message"></div>
+</div>
+</div>
+
+
+<!-- Overlay panels (story / shop / achievements) -->
+<div id="overlay">
+<div id="story-panel" class="overlay-panel" style="display:none">
+<h2>Story</h2><p id="story-text"></p><button id="story-continue" class="primary">Continue</button>
+</div>
+<div id="shop-panel" class="overlay-panel" style="display:none">
+<h2>Shop</h2><p>Spend your coins on power-ups for the next level.</p><div id="shop-items"></div><button id="shop-continue" class="primary">Continue</button>
+</div>
+<div id="achievement-panel" class="overlay-panel" style="display:none">
+<h2>Achievement Unlocked!</h2><p id="achievement-text"></p><button id="achievement-continue" class="primary">Continue</button>
+</div>
+</div>
+
+
+<!-- Libraries & scripts -->
+<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<script src="wallet_exodus_integration.js"></script>
+<script src="script_final.js"></script>
 </body>
 </html>
