--- a/index.html
+++ b/index.html
@@ -1,93 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crypto Hidden Object Game</title>
+  <link rel="icon" href="data:,">
   <style>
-    :root{--bg1:#c2e9fb;--bg2:#a1c4fd;--card:#ffffff;--text:#333;--primary:#4a90e2;--danger:#f44336}
-    body{margin:0;padding:0;font-family:Arial,Helvetica,sans-serif;background:linear-gradient(135deg,var(--bg1) 0%,var(--bg2) 100%);color:var(--text)}
-    header{background:var(--primary);color:#fff;text-align:center;padding:1rem 0;box-shadow:0 2px 4px rgba(0,0,0,.1);position:sticky;top:0;z-index:10}
-    #game-card{max-width:760px;margin:2rem auto;background:rgba(255,255,255,.92);backdrop-filter:blur(10px);border-radius:12px;box-shadow:0 6px 18px rgba(0,0,0,.12);overflow:hidden}
-    #start-screen,#game-screen{padding:1rem 1.25rem}
-    #start-screen select,#start-screen button{margin:.35rem .35rem .35rem 0}
-    #score-bar{display:flex;flex-wrap:wrap;gap:.75rem;align-items:center;font-weight:700;margin:.25rem 0}
-    #progress-container{width:100%;height:14px;background:#e0e0e0;border-radius:7px;overflow:hidden;margin:.3rem 0 .6rem}
-    #progress-bar{height:100%;width:100%;background:#4caf50;transition:width .25s linear,background .25s linear}
-    #hidden-object-area{position:relative;width:100%;height:360px;border-radius:10px;background:linear-gradient(180deg,#83a4d4 0%,#b6fbff 100%);overflow:hidden;margin-bottom:.75rem}
-    .object,.bonus,.time-item,.life-item,.boss-star,.bomb{position:absolute;display:flex;justify-content:center;align-items:center;font-size:26px;font-weight:700;cursor:pointer}
-    .object{width:32px;height:32px;color:#ffcc00;animation:pulse 2s infinite}
-    .bonus{width:32px;height:32px;color:#ffc107;animation:bounce 1.5s infinite}
-    .time-item{width:32px;height:32px;color:#00bcd4;animation:bounce 1.6s infinite}
-    .life-item{width:32px;height:32px;color:#e91e63;animation:bounce 1.7s infinite}
-    .boss-star{width:46px;height:46px;color:#ffd700;animation:pulse 1.1s infinite}
-    .bomb{width:32px;height:32px;color:#f44336}
-    @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.18)}100%{transform:scale(1)}}
-    @keyframes bounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
-    .spark{position:absolute;width:8px;height:8px;background:#ffd700;border-radius:50%;opacity:.9;animation:spark .6s forwards}
-    @keyframes spark{0%{transform:scale(1);opacity:1}100%{transform:scale(.1);opacity:0}}
-    #controls{display:flex;flex-wrap:wrap;gap:.5rem}
-    #controls button{flex:1 1 120px;padding:.55rem;border:none;border-radius:6px;background:#ddd;font-weight:600;cursor:pointer}
-    #controls .primary{background:var(--primary);color:#fff}
-    #controls .danger{background:var(--danger);color:#fff}
-    #overlay{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center;z-index:50}
-    .overlay-panel{width:min(92%,420px);background:#fff;color:#333;border-radius:12px;padding:1rem 1.25rem;box-shadow:0 4px 12px rgba(0,0,0,.35);text-align:center}
-    .dark-mode{--bg1:#111827;--bg2:#1f2937;--card:#1f2937;--text:#f5f5f5}
-    .dark-mode #game-card{background:rgba(31,41,55,.92);color:#f5f5f5}
+    body {
+      margin: 0; font-family: Arial, sans-serif;
+      background: linear-gradient(135deg,#c2e9fb 0%,#a1c4fd 100%);
+    }
+    header { background:#4a90e2;color:#fff;text-align:center;padding:1rem; }
+    #game-card {
+      max-width:800px; margin:2rem auto; background:#fff; border-radius:12px;
+      padding:1rem; box-shadow:0 4px 12px rgba(0,0,0,.2);
+    }
+    #hidden-object-area {
+      position:relative; width:100%; height:360px; border:1px solid #ccc;
+      background:linear-gradient(180deg,#83a4d4 0%,#b6fbff 100%);
+      margin:1rem 0; overflow:hidden; border-radius:10px;
+    }
+    .object,.bomb,.bonus,.life-item,.time-item,.boss-star {
+      position:absolute; cursor:pointer; font-size:26px;
+    }
+    #controls button { margin:0.25rem; padding:0.5rem 1rem; }
+    .dark-mode { background:linear-gradient(135deg,#111827 0%,#1f2937 100%); color:#f5f5f5; }
   </style>
 </head>
 <body>
   <header><h1>Crypto Hidden Object Game</h1></header>
   <div id="game-card">
-    <!-- Start Screen -->
     <div id="start-screen">
-      <p>Choose difficulty & theme, (optionally) connect your wallet, then start.</p>
-      <label>Difficulty:&nbsp;</label>
+      <p>Choose difficulty & theme, connect your wallet (optional), then start.</p>
+      <label>Difficulty:</label>
       <select id="difficulty-select"><option>Easy</option><option selected>Normal</option><option>Hard</option></select>
-      <label>Theme:&nbsp;</label>
-      <select id="theme-select"><option value="default" selected>Classic</option><option value="time">Time</option><option value="underwater">Underwater</option><option value="dream">Dream</option><option value="village">Village</option></select>
-      <br/>
-      <button id="connect-wallet" class="primary">Connect Wallet</button>
-      <button id="start-game" class="primary">Start Game</button>
+      <label>Theme:</label>
+      <select id="theme-select"><option value="default" selected>Classic</option><option value="dream">Dream</option></select>
+      <br>
+      <button id="connect-wallet">Connect Wallet</button>
+      <button id="start-game">Start Game</button>
       <div id="wallet-address"></div>
       <div id="balance-display"></div>
       <div id="best-stats"></div>
     </div>
-    <!-- Game Screen -->
+
     <div id="game-screen" style="display:none">
       <div id="score-bar">
-        <span id="level-info">Level: 1</span>
-        <span id="coins-display">Coins: 5</span>
-        <span id="lives-info">Lives: 3</span>
+        <span id="level-info">Level: 1</span> |
+        <span id="coins-display">Coins: 5</span> |
+        <span id="lives-info">Lives: 3</span> |
         <span id="highest-info">Highest: 0</span>
       </div>
-      <div id="progress-container"><div id="progress-bar"></div></div>
+      <div id="progress-container"><div id="progress-bar" style="height:12px;background:#4caf50;width:100%"></div></div>
       <div id="hidden-object-area"></div>
       <div id="controls">
-        <button id="hint-button">Hint (Cost: 1)</button>
-        <button id="reveal-button">Reveal All (Cost: 3)</button>
+        <button id="hint-button">Hint (1)</button>
+        <button id="reveal-button">Reveal (3)</button>
         <button id="pause-button">Pause</button>
         <button id="darkmode-button">Dark Mode</button>
-        <button id="reset-button" class="danger">Reset Game</button>
+        <button id="reset-button">Reset</button>
       </div>
       <div id="game-message"></div>
     </div>
   </div>
 
-  <!-- Overlay panels -->
-  <div id="overlay">
-    <div id="story-panel" class="overlay-panel" style="display:none">
-      <h2>Story</h2><p id="story-text"></p><button id="story-continue" class="primary">Continue</button>
-    </div>
-    <div id="shop-panel" class="overlay-panel" style="display:none">
-      <h2>Shop</h2><p>Spend coins on power-ups for the next level.</p><div id="shop-items"></div><button id="shop-continue" class="primary">Continue</button>
-    </div>
-    <div id="achievement-panel" class="overlay-panel" style="display:none">
-      <h2>Achievement Unlocked!</h2><p id="achievement-text"></p><button id="achievement-continue" class="primary">Continue</button>
-    </div>
-  </div>
-
-  <!-- Libraries & scripts -->
+  <!-- ספריות וסקיפטים -->
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
   <script src="wallet_exodus_integration.js"></script>
