--- a/index.html
+++ b/index.html
@@ -89,10 +89,17 @@
     </div>
   </div>
 
-  <!-- LIBS + MODULES -->
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-  <script src="wallet_exodus_integration.js"></script>
-  <script src="script.js"></script>
+  <!-- ethers.js -->
+<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
+
+<!-- WalletConnect v2 UMD (Ethereum Provider) -->
+<script src="https://unpkg.com/@walletconnect/ethereum-provider/dist/index.umd.js"></script>
+
+<!-- מודול הארנק שלנו (v2) – חייב לבוא לפני script.js -->
+<script src="wallet_wc_v2.js"></script>
+
+<!-- לוגיקת המשחק -->
+<script src="script.js"></script>
+
 </body>
 </html>
